<?xml version="1.0"?>
<package>
  <name>imu_publisher</name>
  <version>0.1.0</version>
  <description>
    ROS package for BMS power.
    
  </description>
  <license>BSD</license>
  <author email="cai.huaqiang@houdar.com">James Rui</author>
  <maintainer email="cai.huaqiang@houdar.com">James Rui</maintainer>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <run_depend>boost</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  
  <export></export>
</package>
